level2_network/02-ingress/adminer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: infra-net
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adminer.mydormroom.com
        - adminer.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: adminer.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
    - host: adminer.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
