level2_network/02-ingress/argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.mydormroom.com
        - argocd.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: argocd.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
    - host: argocd.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
