level2_network/02-ingress/dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.mydormroom.com
        - dashboard.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: dashboard.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
    - host: dashboard.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
