level2_network/02-ingress/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: infra-net
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.mydormroom.com
      secretName: mydormroom-tls
  rules:
    - host: grafana.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
