level2_network/02-ingress/konga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - konga.mydormroom.com
        - konga.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: konga.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konga
                port:
                  number: 1337
    - host: konga.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konga
                port:
                  number: 1337
