level2_network/02-ingress/mongo-express.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: infra-net
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mongo-express.mydormroom.com
        - mongo-express.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: mongo-express.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
    - host: mongo-express.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
