level2_network/02-ingress/open-webui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: ai
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - open-webui.mydormroom.com
        - open-webui.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: open-webui.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
    - host: open-webui.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
