level2_network/02-ingress/redis-commander.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-ingress
  namespace: infra-net
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - redis-commander.mydormroom.com
        - redis-commander.mydormroom.dpdns.org
      secretName: mydormroom-tls
  rules:
    - host: redis-commander.mydormroom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander
                port:
                  number: 8081
    - host: redis-commander.mydormroom.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander
                port:
                  number: 8081
